# allan_variance

./: CMakeLists.txt  README.md  package.xml
launch/: allan_variance.launch  allan_variance_live.launch
scripts/: allan.py  allan_live.py  allan_split.py  getStandardDeviation.py
